--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -1,16 +1,21 @@
 /* Small Screen */
 .container {
-  padding: 1rem;
+  padding: 3rem 1rem;
 }
 
 .hero {
   display: flex;
-  flex-direction: column;
+  flex-direction: column-reverse;
 }
 
 .hero__left {
   margin-bottom: 1rem;
   text-align: left;
+}
+
+.hero__right {
+  width: 60%;
+  align-self: center;
 }
 
 .hero__title {
@@ -42,25 +47,32 @@
 }
 
 .hero__image {
-  background-image: url(../Assets/img/logo.png);
+  background-image: url(../Assets/img/hero.png);
   max-width: 100%;
   border-radius: 15px;
 }
 
 /* Medium Screen */
 @media (min-width: 768px) {
+  .container {
+    padding: 6rem 1rem;
+  }
+
   .hero {
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
     padding: +0.5rem;
   }
+
+  .hero__left {
+    flex-basis: 60%;
+  }
 }
 
 /* Large Screen */
 @media (min-width: 992px) {
   .container {
-    padding: 0.8rem 8rem;
-    margin: 0 auto;
+    padding: 3rem 8rem;
   }
 }
