--- a/src/components/AddCaseForm/AddCaseForm.module.css
+++ b/src/components/AddCaseForm/AddCaseForm.module.css
@@ -15,7 +15,7 @@
 }
 
 .form__title {
-  color: #80ec9c;
+  color: #00BFA6;
   font-size: 2.5rem;
 }
 
@@ -43,15 +43,14 @@
   margin-top: 1rem;
   border: none;
   border-radius: 8px;
-  background-color: #80ec9c;
+  background-color: #00BFA6;
   color: #fff;
   cursor: pointer;
   transition: all 0.3s ease-in-out;
 }
 
 .form__button:hover {
-    background-color: #B81D24;
-    transition: all 0.3s ease-in-out;
+    background-color: #097a7a;
 }
 
 .form__image {
