--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -1,6 +1,6 @@
 /* Small Screen */
 .container {
-  background-color: #14747c;
+  background-color: #097a7a;
   color: #fff;
   padding: 1rem;
   text-align: center;
@@ -30,7 +30,7 @@
 }
 
 .footer__item:hover {
-    color: #80ec9c;
+    color: #5bf7a5;
     transition: all 0.3s ease-in-out;
 }
 
