--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -19,7 +19,7 @@
 }
 
 .hero__title {
-  color: #80ec9c;
+  color: #00BFA6;
   font-size: 2.5rem;
 }
 
@@ -30,20 +30,23 @@
 }
 
 .hero__desc {
-  margin-top: 1rem;
+  margin: 2rem 0;
   font-size: 1rem;
   color: #1c3434;
 }
 
 .hero__button {
   padding: 1rem 2rem;
-  margin-top: 1rem;
   border: none;
   border-radius: 8px;
-  background-color: #80ec9c;
+  background-color: #00BFA6;
   color: #fff;
   cursor: pointer;
   transition: all 0.3s ease-in-out;
+}
+
+.hero__button:hover {
+    background-color: #097a7a;
 }
 
 .hero__image {
