--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -1,6 +1,6 @@
 /* Small Screen */
 .container {
-  background-color: #4ab4bc;
+  background-color: #097a7a;
   padding: 1rem;
   color: #fff;
   box-shadow: 0 5px 15px 0 rgba(0, 0, 0, 0.25);
@@ -29,7 +29,7 @@
 }
 
 .navbar__item:hover {
-    color: #80ec9c;
+    color: #5bf7a5;
     transition: all 0.3s ease-in-out;
 }
 
