--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -20,10 +20,10 @@
   display: flex;
   flex-direction: column;
   list-style: none;
+  margin: 0;
 }
 
 .navbar__item {
-    margin: 0 1rem;
     cursor: pointer;
     transition: all 0.3s ease-in-out;
 }
@@ -49,6 +49,10 @@
 
   .navbar__list {
     flex-direction: row;
+  }
+
+  .navbar__item {
+    margin: 0 1rem;
   }
 }
 
