--- a/src/components/Card/Card.module.css
+++ b/src/components/Card/Card.module.css
@@ -1,20 +1,38 @@
+/* Small screen */
 .container {
-  margin: 1rem;
-  padding: 2rem 6rem;
+  padding: 0.8rem 0;
   background-color: #fff;
   border-radius: 10px;
 }
 
-.card {
-  width: 100%;
+.card__title {
+  font-size: 1.5rem;
+}
+
+.card__count {
+  color: #009884;
+  font-size: 1.2rem;
+  font-weight: 600;
+}
+
+/* Medium Screen */
+@media (min-width: 768px) {
+  .container {
+    padding: 2rem 0;
+  }
 }
 
 /* Large screen */
 @media (min-width: 992px) {
-  .card__title {
-    font-size: 1.9rem;
+  .container {
+    padding: 2rem 6rem;
   }
+
+  .card__title {
+    font-size: 1.8rem;
+  }
+
   .card__count {
-    font-size: 2.4rem;
+    font-size: 2rem;
   }
 }
