--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -26,12 +26,10 @@
 .footer__item {
     margin: 0 1rem;
     cursor: pointer;
-    transition: all 0.3s ease-in-out;
 }
 
 .footer__item:hover {
-    color: #5bf7a5;
-    transition: all 0.3s ease-in-out;
+    color: #6bf7ae;
 }
 
 /* Medium Screen */
@@ -57,5 +55,10 @@
 @media (min-width: 992px) {
   .container {
     padding: 0.8rem 5rem;
+  }
+
+  .footer {
+    max-width: 1440px;
+    margin: 0 auto;
   }
 }
