--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -19,7 +19,7 @@
 }
 
 .hero__title {
-  color: #00BFA6;
+  color: #009884;
   font-size: 2.5rem;
 }
 
@@ -30,7 +30,7 @@
 }
 
 .hero__desc {
-  margin: 2rem 0;
+  margin: 2.5rem 0;
   font-size: 1rem;
   color: #1c3434;
 }
@@ -39,10 +39,10 @@
   padding: 1rem 2rem;
   border: none;
   border-radius: 8px;
-  background-color: #00BFA6;
+  background-color: #009884;
   color: #fff;
   cursor: pointer;
-  transition: all 0.3s ease-in-out;
+  font-size: 1rem;
 }
 
 .hero__button:hover {
@@ -58,14 +58,25 @@
 /* Medium Screen */
 @media (min-width: 768px) {
   .container {
-    padding: 6rem 1rem;
+    padding: 6rem 2.5rem;
   }
 
   .hero {
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    padding: +0.5rem;
+  }
+
+  .hero__title {
+    font-size: 3rem;
+  }
+
+  .hero__tagline {
+    font-size: 1.5rem;
+  }
+
+  .hero__desc {
+    font-size: 1.2rem;
   }
 
   .hero__left {
@@ -76,6 +87,8 @@
 /* Large Screen */
 @media (min-width: 992px) {
   .container {
-    padding: 3rem 8rem;
+    padding: 4rem 8rem;
+    max-width: 1440px;
+    margin: 0 auto;
   }
 }
